--- a/config/presento.sty
+++ b/config/presento.sty
@@ -133,7 +133,7 @@
 }
 
 \usepackage{natbib}
-\bibpunct[: ]{[}{]}{;}{a}{}{,}
+\bibpunct[: ]{(}{)}{;}{a}{}{,}
 
 \setbeamertemplate{itemize items}{\color{colorblue}$\bullet$}
 \setbeamertemplate{enumerate items}{\color{colorblue}$\theenumi$.}
